bad/var_decl_init_invalid_conversion_bool_null.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_bool_null.lat:3:12: [1;31merror: [0;1mincompatible types: cannot assign variable of type `boolean` with an expression of type `null`[m
	boolean x = null;
	          [1;32m^[m
